updated research catalogue

--- a/03_study-design.Rmd
+++ b/03_study-design.Rmd
@@ -27,7 +27,7 @@ Given the experimental nature of EMA, studies are often piloted in healthy or su
 
 With the study hypotheses in place, theoretical constructs must be operationalized into quantitative measures. For this, you should consult the scientific literature on the reliability and validity of existing EMA measures.
 
-In active EMA research, complex multi-dimensional constructs such as mood and anxiety are often measured using single-item questions, to reduce the assessment burden of participants, who are prompted several times per day. You should ask yourself (and the scientific literature) what the psychometric properties are of these measures are. How do these EMA-measures compare to scores on traditional assessments (e.g., self-report questionnaires, clinical interviews) ? What is known about the measurement error of the EMA measure? Surprisingly, these questions are often ignored in EMA research, even though it has been estimated that up to 30% to 50% of the observed variance in intensive repeated measures data can be attributable to measurement error [@Schuurman2015].
+In active EMA research, complex multi-dimensional constructs such as mood and anxiety are often measured using single-item questions, to reduce the assessment burden of participants, who are prompted several times per day. You should ask yourself (and the scientific literature) what the psychometric properties are of these measures are. How do these EMA-measures compare to scores on traditional assessments (e.g., self-report questionnaires, clinical interviews)? What is known about hte variability of items scores? And what is known about the measurement errors? Surprisingly, this last questions is often ignored in EMA research, even though it has been estimated that up to 30% to 50% of the observed variance in intensive repeated measures data can be attributable to measurement error [@Schuurman2015].
 
 In passive EMA research, it is important to be aware of the characteristics and limitations of the 'data acquisition interfaces' [@Stone2002]. For example, if you want to collect accelerometer data, a variety of options exist. You can collect these data via the built-in accelerometer of the smartphone of the participants, via cheap commercially available activity trackers, such as Fitbit, or via expensive wearable devices that are developed specifically for scientific research. Each option comes with specific advantages and disadvantages. Smartphone-based accelerometer data, for example, can be collected with relative ease, but these data can also be noisy and incomplete, since samples rates can often not be set and the precision of the built-in sensors varies considerably from device to device. Commercial accelerometers may have better precision and reliability (see, e.g., @Evenson2015), but manufacturers often limit access to raw data and data pre-processing algorithms, making it difficult (or even impossible) to fully analyse outcomes. Being aware of these issues when you plan the study, will help considerably in the analysis stage of your study. 
 
