--- a/book.bib
+++ b/book.bib
@@ -215,6 +215,17 @@
   year = {2014}
 }
 
+@article{collip2011social,
+  title={Social world interactions: how company connects to paranoia},
+  author={Collip, D and Oorschot, M and Thewissen, V and Van Os, J and Bentall, R and Myin-Germeys, Inez},
+  journal={Psychological medicine},
+  volume={41},
+  number={5},
+  pages={911--921},
+  year={2011},
+  publisher={Cambridge University Press}
+}
+
 @article{Conner2009,
   title={Experience sampling methods: A modern idiographic approach to personality research},
   author={Conner, Tamlin S and Tennen, Howard and Fleeson, William and Barrett, Lisa Feldman},
@@ -1057,6 +1068,17 @@ year = {1999}
   pages={25},
   year={2016},
   publisher={BioMed Central}
+}
+
+@article{pot2018,
+  title={Virtual-reality-based cognitive behavioural therapy versus waiting list control for paranoid ideation and social avoidance in patients with psychotic disorders: a single-blind randomised controlled trial},
+  author={Pot-Kolder, Roos MCA and Geraets, Chris NW and Veling, Wim and van Beilen, Marije and Staring, Anton BP and Gijsman, Harm J and Delespaul, Philippe AEG and van der Gaag, Mark},
+  journal={The Lancet Psychiatry},
+  volume={5},
+  number={3},
+  pages={217--226},
+  year={2018},
+  publisher={Elsevier}
 }
 
 @article{Roenneberg2003,
