--- a/08_features.Rmd
+++ b/08_features.Rmd
@@ -114,6 +114,17 @@ malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
 purus nec, lobortis imperdiet diam. 
 
 
+## Missing values
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
+metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
+sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
+tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
+sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
+Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
+ut massa tempor, ac dapibus dui viverra. How to prevent imputation structure to becoming
+a feature of your signal?
+
+
 ## Feature Selection
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
